--- a/kraken_frontend/src/styling/workspace-settings.css
+++ b/kraken_frontend/src/styling/workspace-settings.css
@@ -89,8 +89,6 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
-    max-height: 90vh;
-    overflow-y: auto;
 }
 
 .workspace-setting-popup h2 {
